--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,5 @@
-body{
-    font-family: 'karla';
-    margin: 0;
-    padding: 1rem 3rem;
+body {
+  font-family: 'karla';
+  /* margin: 0; */
+  padding: 1rem 2rem;
 }
