--- a/frontend/src/components/collection-preview/collection-preview.styles.scss
+++ b/frontend/src/components/collection-preview/collection-preview.styles.scss
@@ -1,11 +1,12 @@
 .collection-preview {
     display: flex;
     flex-direction: column;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
+    padding: 1rem 3rem;
 
     .title {
         font-size: 28px;
-        margin-bottom: 25px;
+        margin-bottom: 20px;
     }
 
     .preview {
