--- a/frontend/src/universal/header/header.styles.scss
+++ b/frontend/src/universal/header/header.styles.scss
@@ -7,10 +7,18 @@
   align-items: center;
 
   .logo-container {
-    width: 70px;
+    width: 150px;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+
+    div {
+      text-align: center;
+      font-size: 1.2rem;
+      font-weight: 500;
+      cursor: pointer;
+    }
 
     img {
       height: 100%;
