--- a/frontend/src/components/custom-button/custom-button.styles.scss
+++ b/frontend/src/components/custom-button/custom-button.styles.scss
@@ -14,8 +14,8 @@
   cursor: pointer;
 
   &:hover {
-    background-color: white;
-    color: black;
+    background-color: #fff;
+    color: #000;
     border: 1px solid black;
   }
 }
