--- a/frontend/src/universal/header/header.styles.scss
+++ b/frontend/src/universal/header/header.styles.scss
@@ -1,21 +1,21 @@
 .header {
   height: 90px;
   width: 100%;
-  padding: 0.5rem 2rem;
+  padding: 2rem 4rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
 
   .logo-container {
-    width: 150px;
-    height: 100%;
+    width: 15rem;
+    height: 8rem;
     display: flex;
     align-items: center;
     justify-content: center;
 
     div {
       text-align: center;
-      font-size: 1.2rem;
+      font-size: 1.8rem;
       font-weight: 500;
       cursor: pointer;
     }
@@ -34,8 +34,8 @@
     justify-content: flex-end;
 
     .option {
-      padding: 10px 15px;
-      font-size: 1.2rem;
+      padding: 1rem 1.5rem;
+      font-size: 2rem;
     }
   }
 }
