--- a/frontend/src/components/custom-button/custom-button.styles.scss
+++ b/frontend/src/components/custom-button/custom-button.styles.scss
@@ -1,21 +1,31 @@
 .custom-button {
   color: #fff;
   background-color: #000;
-  min-width: 165px;
   width: auto;
   height: 50px;
   letter-spacing: 0.5px;
   line-height: 50px;
-  padding: 0 35px 0 35px;
+  padding: 0 35px;
   font-size: 15px;
   text-transform: uppercase;
   font-weight: bolder;
   border: none;
   cursor: pointer;
+  font-weight: 400;
 
   &:hover {
     background-color: #fff;
     color: #000;
     border: 1px solid black;
+  }
+
+  &.google-sign-in {
+    background-color: #4285f4;
+    color: #fff;
+
+    &:hover {
+      background-color: #357ae8;
+      border: none;
+    }
   }
 }
