--- a/frontend/src/components/sign-in/sign-in.styles.scss
+++ b/frontend/src/components/sign-in/sign-in.styles.scss
@@ -1,6 +1,20 @@
 .sign-in{
-  width: 30vw;
-  margin: 1rem 2rem;
+  margin: 4rem 2rem;
   display: flex;
   flex-direction: column;
+
+  & h2 {
+    font-size: 3.2rem;
+    margin-bottom: 1rem;
+  }
+
+  & span {
+    font-size: 2rem;
+  }
+
+  & .buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
