--- a/frontend/src/universal/header/header.styles.scss
+++ b/frontend/src/universal/header/header.styles.scss
@@ -33,9 +33,18 @@
     align-items: center;
     justify-content: flex-end;
 
+    
     .option {
       padding: 1rem 1.5rem;
       font-size: 2rem;
+
+      & button {
+        border: none;
+        background: none;
+        cursor: pointer;
+        font-size: 1.8rem;
+      }
     }
+
   }
 }
