--- a/client/src/components/sign-in/sign-in.styles.scss
+++ b/client/src/components/sign-in/sign-in.styles.scss
@@ -15,6 +15,6 @@
   & .buttons {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    // align-items: center;
   }
 }
